syntax = "proto3";
option csharp_namespace = "Phorkus.Proto.Grpc";

import "transaction.proto";
import "default.proto";

message CreateContractTransactionRequest {
    UInt160 from = 1;
    UInt160 to = 2;
    UInt160 asset = 3;
    UInt256 value = 4;
    UInt256 fee = 5;
}
message CreateContractTransactionReply {
    Transaction transaction = 1;
    UInt256 hash = 2;
}

message SendSignedTransactionRequest {
    Transaction transaction = 1;
    Signature signature = 2;
}
message SendSignedTransactionReply {
    UInt256 hash = 1;
}

service AccountService {
    rpc CreateContractTranscation(CreateContractTransactionRequest) returns (CreateContractTransactionReply);
    rpc SendSignedTransaction(SendSignedTransactionRequest) returns (SendSignedTransactionReply);
}